# atlas-graph

./: README.md  pyproject.toml
atlas_graph/: __init__.py  builder.py  cross_project.py  differ.py  doc_intel.py  export.py  persistence.py  simulator.py
tests/: __init__.py  test_cross_project.py  test_differ.py  test_graph.py  test_simulator.py
